--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "precommit": "npm run lint",
     "lint": "eslint .",
     "lintfix": "eslint . --fix",
     "clean": "shx rm -rf dist",
@@ -39,7 +40,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "husky": "^1.1.3"
   },
   "author": {
     "name": "Brij Mohan",
